# cyberdsl

./: .gitignore  CHANGELOG.md  CYBERDSL_YAML_FOR_LLM.md  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  example.cyberdsl  goal.yaml  planfile.yaml  project.sh  pyproject.toml
TODO/: cyberdsl_graph_viewer.html  mermaid_port_graph.mmd
articles/: cyberdsl-family-simulation.md  cyberdsl-project-status.md
cyberdsl/: __init__.py  __main__.py  dashboard.py  graph.py  litellm_adapter.py  models.py  parser.py  webapp.py
cyberdsl/static/: app.css  app.js  index.html
examples/: README.md  family_simulation.py
examples/crisis/: 10_disinformation_network.yaml  README.md
examples/family/: 04_family_baseline.yaml  05_family_crisis_therapy.yaml  README.md  family_model.cyberdsl
examples/institutional/: 06_school_polarization.yaml  09_municipal_protest.yaml  README.md
examples/port/: 01_port_baseline.yaml  02_port_crisis.yaml  03_port_recovery.yaml  README.md  harbor_community.cyberdsl
examples/scenarios/: 07_hospital_overload.yaml  08_company_restructuring.yaml
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  mermaid.export  project.toon.yaml  prompt.txt
testql-scenarios/: generated-cli-tests.testql.toon.yaml
tests/: test_cyberdsl.py
