[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberdsl"
version = "0.2.1"
description = "Cybernetic DSL and runtime for social-system simulations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["litellm>=1.0.0"]

[project.scripts]
cyberdsl = "cyberdsl.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]
viz = ["matplotlib>=3.7", "pandas>=2.0"]

[project.license]
text = "Apache-2.0"
[tool.setuptools.packages.find]
where = ["."]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
